[package]
name = "rust_fft"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_fft"
crate-type = ["cdylib","rlib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }

rustfft = "6.2"

num-complex = "0.4"

rayon = "1.10"

ndarray = "0.17"

serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"